<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_list"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/catagoryTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="cursive"
            android:gravity="center_horizontal"
            android:text="Select News Catagory"
            android:textColor="@color/White"
            android:textSize="56sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/businessBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_button"
            android:fontFamily="monospace"
            android:padding="8dp"
            android:text="@string/business"
            android:textColor="@color/White"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/catagoryTV" />

        <Button
            android:id="@+id/entertainmentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button"
            android:fontFamily="monospace"
            android:padding="8dp"
            android:text="@string/entertainment"
            android:textColor="@color/White"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/businessBtn" />

        <Button
            android:id="@+id/generalBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button"
            android:fontFamily="monospace"
            android:padding="8dp"
            android:text="@string/general"
            android:textColor="@color/White"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/entertainmentBtn" />

        <Button
            android:id="@+id/healthBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button"
            android:fontFamily="monospace"
            android:padding="8dp"
            android:text="@string/health"
            android:textColor="@color/White"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/generalBtn" />

        <Button
            android:id="@+id/scienceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button"
            android:fontFamily="monospace"
            android:padding="8dp"
            android:text="@string/science"
            android:textColor="@color/White"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/healthBtn" />

        <Button
            android:id="@+id/sportsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button"
            android:fontFamily="monospace"
            android:padding="8dp"
            android:text="@string/sports"
            android:textColor="@color/White"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scienceBtn" />

        <Button
            android:id="@+id/technologyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button"
            android:fontFamily="monospace"
            android:padding="8dp"
            android:text="@string/technology"
            android:textColor="@color/White"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sportsBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>